# ham-projects

./: .gitignore  CLAUDE.md  README.md  notes.md
49-1-unun/: README.md  bom.md
49-1-unun/simulations/: unun49_performance.py
9-1-unun/: README.md  bom.md
9-1-unun/simulations/: unun_performance.py
FT-710/ft710ctl/: README.md  SMOKE.md  pyproject.toml
FT-710/ft710ctl/ft710ctl/: __main__.py  server.py
FT-710/ft710ctl/ft710ctl/radio/: commands.py  port.py  protocol.py  state.py
FT-710/ft710ctl/ft710ctl/web/: app.js  index.html  style.css
FT-710/ft710ctl/tests/: fake_serial.py  test_commands.py  test_fake_serial.py  test_port.py  test_protocol.py  test_server.py  test_state.py
FT-710/research/: 2026-05-14-ft710-control-app-design.md  2026-05-14-ft710-control-app-plan.md
FTX1/: FTX-1_Optima_Research_Guide.md
KH1/: CLAUDE.md  community-research-2026-05.md  operating-cheat-sheet.md
KH1/counterpoise-wire-kit/: README.md  bom.md
KH1/efhw-portable/: README.md  bom.md
KH1/efhw-portable/schematics/: circuit-and-layout.md
KH1/efhw-portable/simulations/: efhw_portable_performance.py
KH1/go-kit/: README.md
KH1/micro-travel-kit/: README.md  bom.md
common-mode-choke/: README.md  bom.md
common-mode-choke/simulations/: choke_impedance.py
